--- a/cetak.html
+++ b/cetak.html
@@ -24,19 +24,16 @@
 			</tr>
 			<?php 
 			$no = 1;
-			$sql = mysqli_query($koneksi,"select * from data_siswa");
+			$sql = mysqli_query($data,"SELECT * FROM data_siswa");
 			while($data = mysqli_fetch_array($sql)){
 			?>
 			<tr>
-				<td><?php echo $ID++; ?></td>
+				<td><?php echo $data['ID']; ?></td>
 				<td><?php echo $data['Username']; ?></td>
 				<td><?php echo $data['Password']; ?></td>
 				<td><?php echo $data['Level']; ?></td>
 				<td><?php echo $data['Full Name']; ?></td>
 			</tr>
-			<?php 
-			}
-			?>
 		</table>
 	</center>
 </body>
